# dyer

./: .gitignore  Cargo.toml  README.md  config  dyer.cfg  log4rs.yaml  quick-start.md  setting.toml
book/: book.toml
book/src/: SUMMARY.md
book/src/actor/: readme.md
book/src/attr/: readme.md
book/src/database/: readme.md
book/src/middleware/: readme.md
docs/: index.html  print.html  searchindex.js
docs/affix/: index.html
docs/book/: 404.html  intro.html
docs/book/actor/: index.html
docs/book/attr/: index.html
docs/book/dyer-cli/: index.html
docs/book/middleware/: index.html
docs/database/: index.html
docs/feedback/: index.html
docs/src/: intro.md
docs/src/affix/: readme.md
docs/src/dyer-cli/: readme.md
docs/src/feedback/: readme.md
dyer-macros/: Cargo.toml  README.md
dyer-macros/src/: lib.rs
examples/: README.md
examples/customized-demo/: Cargo.toml
examples/customized-demo/src/: main.rs
examples/dyer-diesel/: .env  Cargo.toml  config  dyer.cfg
examples/dyer-diesel/migrations/2021-09-24-130258_quotes/: down.sql  up.sql
examples/dyer-diesel/src/: actor.rs  affix.rs  entity.rs  middleware.rs  parser.rs  pipeline.rs  schema.rs  spider.rs
examples/simple-demo/: Cargo.toml  README.md  config  dyer.cfg
examples/simple-demo/.target/: main.rs
examples/simple-demo/src/: actor.rs  affix.rs  entity.rs  lib.rs  main.rs  middleware.rs  parser.rs  pipeline.rs  spider.rs
examples/template/: Cargo.toml  README.md  config  dyer.cfg
examples/template/src/: actor.rs  affix.rs  entity.rs  lib.rs  main.rs  middleware.rs  parser.rs  pipeline.rs  spider.rs
macros/: Cargo.toml
macros/src/: .lib.rs.swp  lib.rs
src/: engine.rs  lib.rs  main.rs
src/component/: affix.rs  body.rs  client.rs  couple.rs  info.rs  meta.rs  mod.rs  parsed.rs  parser.rs  profile.rs  proxy.rs  request.rs  response.rs  task.rs  useragent.rs  utils.rs  xpath.rs  xpath_stable.rs
src/engine/: actor.rs  appfut.rs  arg.rs  engine.rs  macros.rs  mod.rs  parser.rs  profile.rs  request.rs  response.rs  spider.rs  task.rs  useragent.rs  vault.rs
src/item/: mod.rs  parser.rs  profile.rs  request.rs  response.rs  task.rs  useragent.rs  weibo.rs
src/macros/: middleware.rs  mod.rs  pipeline.rs  spider.rs
src/middleware/: hand_err.rs  hand_item.rs  hand_req.rs  hand_res.rs  mod.rs
src/pipeline/: mod.rs  out.rs  yield_err.rs
src/plugin/: affixor.rs  deser.rs  middleware.rs  mod.rs  pipeline.rs  spider.rs
src/spider/: app.rs  mod.rs  parse.rs
