[package]
name = "dyer"
version = "0.2.0"
authors = ["HomelyGuy"]
edition = "2018"
license = "MIT"
keywords = ["crawler", "spider", "web-crawling", "web-framework", "scrapy"]
categories = ["network-programming", "web-programming"]
description = " Dyer is designed for reliable, flexible and fast web-crawling, providing some high-level, comprehensive  features without compromising speed.  By means of event-driven, non-blocking I/O tokio and powerful, reliable Rust programming language."
homepage = "https://crates.io/crates/dyer"
repository = "https://github.com/HomelyGuy"
documentation = "https://docs.rs/dyer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= {version="1.0.123", features=["derive"]}
serde_json='1.0.57'
tokio={ version = "0.2.22", features = [ "macros", "rt-threaded" ] }
futures="0.3.12"
typed-builder = "0.9.0"
hyper = "0.13.8"
hyper-tls="0.4.3"
hyper-timeout="0.3.1"
brotli2='0.3.2'
flate2='1.0.20'
bytes="0.5.6"
signal-hook="0.1.17"
log="0.4.13"
rand="0.8.3"
