[package]
name = "dyer"
version = "3.0.0"
authors = ["HomelyGuy"]
edition = "2018"
license = "MIT"
keywords = [ "Request-Response", "data-processing", "web-crawling", "web-framework", "spider"]
categories = ["network-programming", "web-programming"]
description = " dyer is designed for reliable, flexible and fast Request-Response based service, including data processing, web-crawling and so on, providing some friendly, flexible, comprehensive  features without compromising speed."
homepage = "https://crates.io/crates/dyer"
repository = "https://github.com/HomelyGuy/dyer"
documentation = "https://docs.rs/dyer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.123", features=["derive"]}
tokio = { version = "0.2.22", features = [ "rt-threaded"] }
#futures = { version = "0.3.12"  }
futures-util = "0.3.17"
async-trait = "0.1.51"
#futures-executor ={ version= "0.3.17" }
http = {version = "0.2.5"  }
hyper = "0.13.8"
hyper-tls ="0.4.3"
hyper-timeout = "0.3.1"
brotli2 = "0.3.2"
flate2 = "1.0.20"
bytes = "0.5.6"
signal-hook = "0.1.17"
log = "0.4.13"
dyer-macros = {path = "dyer-macros/", version = "0.2.0"}

[dev-dependencies]
select = "0.5.0"
simple_logger = "1.11.0"
#serde_json = "1.0.57"
