[package]
name = "customized-demo"
version = "0.1.0"
authors = ["captain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyer = "*"
tokio = { version = "0.2", features = [ "macros", "rt-threaded" ] }
serde = {version = "*", features = ["derive"] }
select = "*"
simple_logger = "*"
