[package]
name = "crawler"
version = "0.1.0"
authors = ["your name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crawler"
path = "src/actor.rs"

[[bin]]
name = "crawler"
path = "src/bin/crawler.rs"

[dependencies]
dyer = { path = "../..", features=["xpath-alpha"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.20", features = ["rt-multi-thread"]}
simple_logger = "1.11" 
diesel = {version = "1.4.1", features = ["sqlite", "mysql", "postgres", "serde_json",  "numeric"] }
dotenv = "0.15"
