[package]
name = "simple-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple_demo"
path = ".target/main.rs"

[dependencies]
dyer = { version = "2.0" }
serde = { version = "*", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"]}
simple_logger = "*"
select = "*"
futures = "*"
