[package]
name = "simple-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_demo"
path = "src/actor.rs"

[[bin]]
name = "simple-demo"
path = "src/bin/simple_demo.rs"

[dependencies]
#dyer = { version = "3.1" }
dyer = { path = "../.." }
serde = { version = "*", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"]}
simple_logger = "*"
select = "*"
serde_json = "*"
log = "*"
