[package]
name = "template"
version = "0.1.0"
authors = ["your name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "template"
path = "src/actor.rs"

[[bin]]
name = "template"
path = "src/bin/template.rs"

[dependencies]
dyer = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"]}
simple_logger = "1.11" 